The most significant changes involve the refactoring of thread creation in `Loader.java` and `RecordFX.java`, the addition of a new dependency in the `pom.xml` file, and the replacement of the `toPixmap()` method with `flipY()` in `RecordFX.java`.
1. The `pom.xml` file has been updated to include a new dependency for `javafx-swing` version `21.0.2`. This change suggests that the project is transitioning to use JavaFX for its GUI components.

2. In `Loader.java` and `RecordFX.java`, the creation of new threads has been refactored. Instead of directly creating and starting a new thread, a `Thread` object named `load` is created, set as a daemon thread, and then started. This change improves the manageability of threads in the application.

3. The `RecordFX.java` file has seen several changes. Import statements for `com.badlogic.gdx.Gdx`, `com.badlogic.gdx.graphics.Pixmap`, and `com.badlogic.gdx.graphics.PixmapIO` have been removed, while import statements for `javafx.embed.swing.SwingFXUtils`, `javafx.scene.image.PixelWriter`, `javafx.scene.image.WritableImage`, `javafx.scene.paint.Color`, and `javax.imageio.ImageIO` have been added. This indicates a shift from using the libGDX library to the JavaFX library for image processing.

4. The `toPixmap()` method in `RecordFX.java` has been replaced with `flipY()`, which creates a `WritableImage` instead of a `Pixmap`. The `writePNG()` method has also been updated to work with `WritableImage` instead of `Pixmap`, and now uses `ImageIO.write()` instead of `PixmapIO.writePNG()`. These changes further confirm the transition from libGDX to JavaFX for image processing.

5. In `SpineController.java`, the `fitWidthProperty()` and `fitHeightProperty()` listeners and bindings have been updated to add `350` and `50` respectively, instead of `368` and `103`. This change suggests a modification in the dimensions of some GUI components.

6. The `Main.recording` boolean is now set to `true` on the JavaFX Application Thread using `Platform